doc(vendor.github.dockerfile.docs): add notes

--- a/_vendor/github.com/moby/buildkit/frontend/dockerfile/docs/DockerfileARG
+++ b/_vendor/github.com/moby/buildkit/frontend/dockerfile/docs/DockerfileARG
@@ -1,36 +1,22 @@
 # Use an existing base image
 FROM ubuntu:20.04
 
-# Copy files from the host machine to the container
-COPY . .
-#---
-
-# ARG   -- Add variables
 # 1. Pass default value
 ARG argument=argument1
 # 2. If you code ARG AFTER using it -> they are NOT evaluate it
 #---
 
-
-
-# ENV  -- Add environment variables --
-# 1. Invalid to pass variables in another line
-#ENV
-#GIRL_NAME=rosi
-
 ENV GIRL_NAME=rosi QUOTE_REMOVED="Quotes removed" SET_WHITESPACE=Alfred\ whitespace ARGUMENT=${argument}
 ENV ARGUMENT_NOT_EVALUATED=${argumentnotevaluated}
-#SET_WHITESPACE=Alfred \ whitespace         \ must be passed close to the previous word
-# ---
-
-# syntax / NO passing "="
-ENV ONE TWO
-# if you do NOT specify "=" -> first word is taken as key of the environment variable
-ENV ONEANOTHER TWO THREE world
 
 # ARG, point 2
+# 3. several ARG can be spcified
 ARG argumentnotevaluated=argumentnoteval
 
+# 4. ARG WITHOUT default value
+ARG argumentwithoutdefaultvalue
+
+# TODO: Add more examples about notes for ARG
 
 # Define the command to run when the container starts
 CMD ["sleep", "3600"]
